<resources>
    <string name="app_name">新开普读卡器</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="full_name">新开普读卡器</string>
    <string name="background_descript">background</string>
    <string name="nfc_icon_descript">NFC_Icon</string>
    <string name="attention">将卡片放置到读卡区</string>
    <string name="card_cate">卡类型</string>
    <string name="name">姓名</string>
    <string name="student_Id">学号</string>
    <string name="balance">余额</string>
    <string name="hardware_Id">硬件ID</string>
    <string name="Dept">学院</string>
    <string name="pId">身份证号</string>
    <string name="deal_List">交易记录</string>
    <string name="type_demo">Type</string>
    <string name="time_demo">Time</string>
    <string name="deal_Demo">Deal</string>
    <string name="read_failed">读卡失败！</string>
    <string name="reading_alert">警告,请重新放置卡片</string>
    <string name="success">成功</string>
    <string name="failed">失败,不支持的卡片</string>
    <string name="isStuCard">校园卡</string>
    <string name="unsupport">不支持的卡片</string>
    <string name="yuan">元</string>
    <string name="consumption">消费</string>
    <string name="recharge">充值</string>
    <string name="share">分享</string>
    <string name="readCard">读卡</string>
    <string name="about">关于</string>
    <string name="title_activity_about">关于</string>

    <string name="other">其他</string>
    <string name="version">版本号</string>
    <string name="developer">开发者</string>
    <string name="github">Github</string>
    <string name="donate">捐赠</string>
    <string name="contact">联系方式</string>
    <string name="Report">邮件反馈</string>
    <string name="report_atten">可以通过邮件向开发者反馈，该操作会唤起邮件应用。</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="email_clint">选择邮件客户端</string>
    <string name="report">反馈</string>
    <string name="intho">理论上适用于所有新开普公司提供的校园卡。</string>
    <string name="aftertest">目前仅在东北大学校园卡测试通过。</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_item_show">
        <item>卡类型</item>
        <item>姓名</item>
        <item>学号</item>
        <item>余额</item>
        <item>学院</item>
        <item>硬件ID</item>
        <item>身份证</item>
        <item>交易记录</item>
    </string-array>
    <string-array name="pref_item_show_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="pref_item_show_default_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">设置</string>
    <string name="display_settings">显示设置</string>

</resources>
