<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wolfaonliu.cardreader.AboutActivity"
    tools:showIn="@layout/app_bar_about">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="20dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="bottom|center_vertical|center"
                    android:text="@string/app_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intho"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aftertest"
                    android:textAlignment="center" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:layout_marginTop="8sp"
            android:background="?attr/colorButtonNormal" />

        <ListView
            android:id="@+id/set_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"></ListView>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:layout_marginBottom="20sp"
            android:background="?attr/colorButtonNormal" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>